Add codename checking